// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseFormula > parses add and mul operations with proper order of operations 1`] = `
{
  "c": [
    {
      "c": [
        {
          "im": 0,
          "r": [
            1,
            2,
          ],
          "re": 21,
          "t": 3,
        },
        {
          "im": 0,
          "r": [
            6,
            7,
          ],
          "re": 23,
          "t": 3,
        },
      ],
      "r": [
        4,
        4,
      ],
      "t": 1,
      "v": "*",
    },
    {
      "r": [
        11,
        12,
      ],
      "t": 2,
      "v": "ab",
    },
  ],
  "r": [
    9,
    9,
  ],
  "t": 1,
  "v": "+",
}
`;

exports[`parseFormula > parses add and mul operations with proper order of operations 2`] = `
{
  "c": [
    {
      "im": 0,
      "r": [
        1,
        2,
      ],
      "re": 21,
      "t": 3,
    },
    {
      "c": [
        {
          "im": 0,
          "r": [
            6,
            7,
          ],
          "re": 23,
          "t": 3,
        },
        {
          "c": [
            {
              "r": [
                11,
                12,
              ],
              "t": 2,
              "v": "ab",
            },
            {
              "n": "pow",
              "o": [
                {
                  "im": 0,
                  "r": [
                    20,
                    20,
                  ],
                  "re": 2,
                  "t": 3,
                },
                {
                  "r": [
                    23,
                    23,
                  ],
                  "t": 2,
                  "v": "z",
                },
              ],
              "r": [
                16,
                18,
              ],
              "t": 4,
            },
          ],
          "r": [
            14,
            14,
          ],
          "t": 1,
          "v": "*",
        },
      ],
      "r": [
        9,
        9,
      ],
      "t": 1,
      "v": "*",
    },
  ],
  "r": [
    4,
    4,
  ],
  "t": 1,
  "v": "+",
}
`;

exports[`parseFormula > parses add and mul operations with proper order of operations 3`] = `"((21*23)+ab)"`;

exports[`parseFormula > parses add and mul operations with proper order of operations 4`] = `"(21+(23*(ab*pow(2, z))))"`;

exports[`parseFormula > parses add operation minus 1`] = `"(123-456)"`;

exports[`parseFormula > parses add operation minus 2`] = `
{
  "c": [
    {
      "im": 0,
      "r": [
        1,
        3,
      ],
      "re": 123,
      "t": 3,
    },
    {
      "im": 0,
      "r": [
        7,
        9,
      ],
      "re": 456,
      "t": 3,
    },
  ],
  "r": [
    5,
    5,
  ],
  "t": 1,
  "v": "-",
}
`;

exports[`parseFormula > parses add operation with diffrent operands 1`] = `"(24+cd)"`;

exports[`parseFormula > parses add operation with diffrent operands 2`] = `"(cd+24)"`;

exports[`parseFormula > parses add operation with diffrent operands 3`] = `
{
  "c": [
    {
      "im": 0,
      "r": [
        1,
        2,
      ],
      "re": 24,
      "t": 3,
    },
    {
      "r": [
        6,
        7,
      ],
      "t": 2,
      "v": "cd",
    },
  ],
  "r": [
    4,
    4,
  ],
  "t": 1,
  "v": "+",
}
`;

exports[`parseFormula > parses add operation with diffrent operands 4`] = `
{
  "c": [
    {
      "r": [
        1,
        2,
      ],
      "t": 2,
      "v": "cd",
    },
    {
      "im": 0,
      "r": [
        6,
        7,
      ],
      "re": 24,
      "t": 3,
    },
  ],
  "r": [
    4,
    4,
  ],
  "t": 1,
  "v": "+",
}
`;

exports[`parseFormula > parses add operation with number operands 1`] = `"(123+456)"`;

exports[`parseFormula > parses add operation with number operands 2`] = `
{
  "c": [
    {
      "im": 0,
      "r": [
        1,
        3,
      ],
      "re": 123,
      "t": 3,
    },
    {
      "im": 0,
      "r": [
        7,
        9,
      ],
      "re": 456,
      "t": 3,
    },
  ],
  "r": [
    5,
    5,
  ],
  "t": 1,
  "v": "+",
}
`;

exports[`parseFormula > parses add operation with number operands, one of them negative 1`] = `"(123+-456)"`;

exports[`parseFormula > parses add operation with number operands, one of them negative 2`] = `
{
  "c": [
    {
      "im": 0,
      "r": [
        1,
        3,
      ],
      "re": 123,
      "t": 3,
    },
    {
      "im": 0,
      "r": [
        7,
        10,
      ],
      "re": -456,
      "t": 3,
    },
  ],
  "r": [
    5,
    5,
  ],
  "t": 1,
  "v": "+",
}
`;

exports[`parseFormula > parses add operation with variable operands 1`] = `"(ab+cd)"`;

exports[`parseFormula > parses add operation with variable operands 2`] = `
{
  "c": [
    {
      "r": [
        1,
        2,
      ],
      "t": 2,
      "v": "ab",
    },
    {
      "r": [
        6,
        7,
      ],
      "t": 2,
      "v": "cd",
    },
  ],
  "r": [
    4,
    4,
  ],
  "t": 1,
  "v": "+",
}
`;

exports[`parseFormula > parses add, mul and pow operations with proper order of operations 1`] = `
{
  "c": [
    {
      "c": [
        {
          "c": [
            {
              "im": 0,
              "r": [
                1,
                2,
              ],
              "re": 21,
              "t": 3,
            },
            {
              "im": 0,
              "r": [
                4,
                4,
              ],
              "re": 3,
              "t": 3,
            },
          ],
          "r": [
            3,
            3,
          ],
          "t": 1,
          "v": "^",
        },
        {
          "im": 0,
          "r": [
            8,
            9,
          ],
          "re": 23,
          "t": 3,
        },
      ],
      "r": [
        6,
        6,
      ],
      "t": 1,
      "v": "*",
    },
    {
      "c": [
        {
          "r": [
            13,
            14,
          ],
          "t": 2,
          "v": "ab",
        },
        {
          "im": 0,
          "r": [
            16,
            16,
          ],
          "re": 2,
          "t": 3,
        },
      ],
      "r": [
        15,
        15,
      ],
      "t": 1,
      "v": "^",
    },
  ],
  "r": [
    11,
    11,
  ],
  "t": 1,
  "v": "+",
}
`;

exports[`parseFormula > parses add, mul and pow operations with proper order of operations 2`] = `"(((21^3)*23)+(ab^2))"`;

exports[`parseFormula > parses complex number expression 1`] = `
{
  "c": [
    {
      "im": 0,
      "r": [
        0,
        0,
      ],
      "re": 2,
      "t": 3,
    },
    {
      "im": 3,
      "r": [
        4,
        5,
      ],
      "re": 0,
      "t": 3,
    },
  ],
  "r": [
    2,
    2,
  ],
  "t": 1,
  "v": "+",
}
`;

exports[`parseFormula > parses empty string 1`] = `"0"`;

exports[`parseFormula > parses empty string 2`] = `
{
  "im": 0,
  "r": [
    0,
    0,
  ],
  "re": 0,
  "t": 3,
}
`;

exports[`parseFormula > parses funcCall 1`] = `
{
  "c": [
    {
      "im": 0,
      "r": [
        0,
        2,
      ],
      "re": 123,
      "t": 3,
    },
    {
      "n": "sin",
      "o": [
        {
          "im": 0,
          "r": [
            10,
            10,
          ],
          "re": 3,
          "t": 3,
        },
      ],
      "r": [
        6,
        8,
      ],
      "t": 4,
    },
  ],
  "r": [
    4,
    4,
  ],
  "t": 1,
  "v": "*",
}
`;

exports[`parseFormula > parses funcCall with 2 params 1`] = `"(123*pow(3, 2))"`;

exports[`parseFormula > parses funcCall with 2 params 2`] = `
{
  "c": [
    {
      "im": 0,
      "r": [
        0,
        2,
      ],
      "re": 123,
      "t": 3,
    },
    {
      "n": "pow",
      "o": [
        {
          "im": 0,
          "r": [
            10,
            10,
          ],
          "re": 3,
          "t": 3,
        },
        {
          "im": 0,
          "r": [
            13,
            13,
          ],
          "re": 2,
          "t": 3,
        },
      ],
      "r": [
        6,
        8,
      ],
      "t": 4,
    },
  ],
  "r": [
    4,
    4,
  ],
  "t": 1,
  "v": "*",
}
`;

exports[`parseFormula > parses imaginary number 1`] = `
{
  "im": 3,
  "r": [
    0,
    1,
  ],
  "re": 0,
  "t": 3,
}
`;

exports[`parseFormula > parses mul operation division 1`] = `"(123/456)"`;

exports[`parseFormula > parses mul operation division 2`] = `
{
  "c": [
    {
      "im": 0,
      "r": [
        1,
        3,
      ],
      "re": 123,
      "t": 3,
    },
    {
      "im": 0,
      "r": [
        7,
        9,
      ],
      "re": 456,
      "t": 3,
    },
  ],
  "r": [
    5,
    5,
  ],
  "t": 1,
  "v": "/",
}
`;

exports[`parseFormula > parses mul operation with diffrent operands 1`] = `"(24*cd)"`;

exports[`parseFormula > parses mul operation with diffrent operands 2`] = `"(cd*24)"`;

exports[`parseFormula > parses mul operation with diffrent operands 3`] = `
{
  "c": [
    {
      "im": 0,
      "r": [
        1,
        2,
      ],
      "re": 24,
      "t": 3,
    },
    {
      "r": [
        6,
        7,
      ],
      "t": 2,
      "v": "cd",
    },
  ],
  "r": [
    4,
    4,
  ],
  "t": 1,
  "v": "*",
}
`;

exports[`parseFormula > parses mul operation with diffrent operands 4`] = `
{
  "c": [
    {
      "r": [
        1,
        2,
      ],
      "t": 2,
      "v": "cd",
    },
    {
      "im": 0,
      "r": [
        6,
        7,
      ],
      "re": 24,
      "t": 3,
    },
  ],
  "r": [
    4,
    4,
  ],
  "t": 1,
  "v": "*",
}
`;

exports[`parseFormula > parses mul operation with number operands 1`] = `"(123*456)"`;

exports[`parseFormula > parses mul operation with number operands 2`] = `
{
  "c": [
    {
      "im": 0,
      "r": [
        1,
        3,
      ],
      "re": 123,
      "t": 3,
    },
    {
      "im": 0,
      "r": [
        7,
        9,
      ],
      "re": 456,
      "t": 3,
    },
  ],
  "r": [
    5,
    5,
  ],
  "t": 1,
  "v": "*",
}
`;

exports[`parseFormula > parses mul operation with variable operands 1`] = `"(ab*cd)"`;

exports[`parseFormula > parses mul operation with variable operands 2`] = `
{
  "c": [
    {
      "r": [
        1,
        2,
      ],
      "t": 2,
      "v": "ab",
    },
    {
      "r": [
        6,
        7,
      ],
      "t": 2,
      "v": "cd",
    },
  ],
  "r": [
    4,
    4,
  ],
  "t": 1,
  "v": "*",
}
`;

exports[`parseFormula > parses negative imaginary number 1`] = `
{
  "im": -2.5,
  "r": [
    0,
    4,
  ],
  "re": 0,
  "t": 3,
}
`;

exports[`parseFormula > parses single float number 1`] = `"222.232"`;

exports[`parseFormula > parses single float number 2`] = `
{
  "im": 0,
  "r": [
    0,
    6,
  ],
  "re": 222.232,
  "t": 3,
}
`;

exports[`parseFormula > parses single negative float number 1`] = `"-222.2"`;

exports[`parseFormula > parses single negative float number 2`] = `
{
  "im": 0,
  "r": [
    0,
    5,
  ],
  "re": -222.2,
  "t": 3,
}
`;

exports[`parseFormula > parses single negative number 1`] = `"-222"`;

exports[`parseFormula > parses single negative number 2`] = `
{
  "im": 0,
  "r": [
    0,
    3,
  ],
  "re": -222,
  "t": 3,
}
`;

exports[`parseFormula > parses single number 1`] = `"222"`;

exports[`parseFormula > parses single number 2`] = `
{
  "im": 0,
  "r": [
    0,
    2,
  ],
  "re": 222,
  "t": 3,
}
`;

exports[`parseFormula > parses single number with spaces 1`] = `
{
  "im": 0,
  "r": [
    7,
    10,
  ],
  "re": 2323,
  "t": 3,
}
`;

exports[`parseFormula > parses single variable 1`] = `"abc"`;

exports[`parseFormula > parses single variable 2`] = `
{
  "r": [
    0,
    2,
  ],
  "t": 2,
  "v": "abc",
}
`;

exports[`parseFormula > parses single variable with spaces 1`] = `"abc"`;

exports[`parseFormula > parses single variable with spaces 2`] = `
{
  "r": [
    7,
    9,
  ],
  "t": 2,
  "v": "abc",
}
`;

exports[`parseFormula > var in power of var 1`] = `
{
  "c": [
    {
      "r": [
        0,
        0,
      ],
      "t": 2,
      "v": "a",
    },
    {
      "r": [
        2,
        2,
      ],
      "t": 2,
      "v": "a",
    },
  ],
  "r": [
    1,
    1,
  ],
  "t": 1,
  "v": "^",
}
`;
